Fix #5551 "Character counter control is a little too wide"

--- a/form-runner/jvm/src/main/assets/xbl/orbeon/character-counter/character-counter.less
+++ b/form-runner/jvm/src/main/assets/xbl/orbeon/character-counter/character-counter.less
@@ -17,7 +17,8 @@
     .xbl-fr-character-counter {
 
         display: inline-block;
-        width: 100%;
+        // 2022-12-02: This caused https://github.com/orbeon/orbeon-forms/issues/5551
+        //width: 100%;
 
         &> .fr-charcounter-wrapper {
 
